# kantinna-rs

./: Cargo.toml  README.md
kantinna/: Cargo.toml
kantinna-cli/: Cargo.toml
kantinna-cli/src/: appinfo.rs  config.rs  main.rs
kantinna-cli/src/commands/: arg_matches.rs  config.rs  mod.rs
