[package]
name = "kantinna-cli"
authors = ["Vlad Eminovici <veminovici@hotmail.com>"]
version = "0.1.0"
edition = "2021"
default-run = "kantinna-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
os_info = "3.6"
ptree = "0.4"
serde = { workspace = true }
toml = { workspace = true }
